--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "dataset = pd.read_csv('~/workspace/datasets/pima-indians-diabetes.csv', header=None)\n",
+    "dataset = pd.read_csv('~/workspace/datasets/pima/pima-indians-diabetes.csv', header=None)\n",
     "\n",
     "# Because thr CSV doesn't contain any header, we add column names \n",
     "# using the description from the original dataset website\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -230,7 +230,7 @@
        "4   33            1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -419,7 +419,7 @@
        "HasDiabetes    0.292695   0.173844  0.238356     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -463,10 +463,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d1a0fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ea54ac8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -489,9 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,13 +605,6 @@
     "\n",
     "Another option is to calculate the **median** value for a specific column and substitute that value everywhere (in the same column) we have zero or null. Let's see how to apply this second method."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1087,7 +1080,7 @@
     }
    },
    "source": [
-    "## Now we know the Model Type and HyperParameters"
+    "# Create Model Configuration"
    ]
   },
   {
@@ -1096,85 +1089,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../../config.json\n",
+    "# %load ../requirements.txt\n",
+    "numpy\n",
+    "xgboost\n",
+    "sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%writefile ../../config.json\n",
     "{\n",
+    "\t\"hyperparameters\": {\n",
+    "\t\t\"eta\": 0.2,\n",
+    "\t\t\"max_depth\": 6\n",
+    "\t},\n",
     "\n",
-    "  \"hyperparameters\": {\n",
-    "    \"\": 1.0\n",
-    "  },\n",
-    "\n",
-    "  \"resources\": {\n",
-    "    \"requests\": {\n",
-    "      \"cpu\": \"200m\",\n",
-    "      \"memory\": \"100Mi\"\n",
-    "    }\n",
-    "  }\n",
+    "\t\"resources\": {\n",
+    "\t\t\"requests\": {\n",
+    "\t\t\t\"cpu\": \"200m\",\n",
+    "\t\t\t\"memory\": \"100Mi\"\n",
+    "\t\t}\n",
+    "\t}\n",
     "}"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Model Trainer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../training.py\n",
+    "# %%writefile ../training.py\n",
     "from numpy import loadtxt\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler as Scaler\n",
     "import pickle\n",
     "\n",
     "\n",
     "def train(data_conf, model_conf, **kwargs):\n",
+    "    hyperparams = model_conf[\"hyperparameters\"]\n",
     "\n",
-    "    # load data\n",
     "    dataset = loadtxt(data_conf['data_path'], delimiter=\",\")\n",
     "\n",
     "    # split data into X and y\n",
-    "    X_train = dataset[:,0:8]\n",
-    "    y_train = dataset[:,8]\n",
+    "    X_train = dataset[:, 0:8]\n",
+    "    y_train = dataset[:, 8]\n",
+    "    \n",
+    "    scaler = Scaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    X_train = scaler.transform(X_train)\n",
     "\n",
     "    print(\"Starting training...\")\n",
     "\n",
-    "    # fit model no training data\n",
-    "    model = XGBClassifier()\n",
+    "    # fit model to training data\n",
+    "    model = XGBClassifier(eta=hyperparams[\"eta\"], max_depth=hyperparams[\"max_depth\"])\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
     "    print(\"Finished training\")\n",
     "\n",
-    "    # save model to pickle file\n",
+    "    # export model artefacts\n",
+    "    pickle.dump(scaler, open(\"models/scaler.pkl\", \"wb\"))\n",
     "    pickle.dump(model, open(\"models/model.pkl\", \"wb\"))\n",
     "\n",
     "    print(\"Saved trained model\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model_conf = {}\n",
-    "data_conf = {}\n",
-    "\n",
-    "train(data_conf, model_conf)"
+    "## Validate Model Trainer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%write` not found.\n"
+      "Starting training...\n",
+      "Finished training\n",
+      "Saved trained model\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../training.py"
+    "import json\n",
+    "\n",
+    "model_conf = json.load(open(\"../../config.json\", \"r\"))\n",
+    "data_conf = json.load(open(\"/Users/wf250003/workspace/datasets/pima/data_config.json\", \"r\"))\n",
+    "\n",
+    "train(data_conf, model_conf)"
    ]
   },
   {
@@ -1185,18 +1204,17 @@
     }
    },
    "source": [
-    "# Make a Prediction"
+    "# Create Model Scorer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../scoring.py\n",
+    "# %%writefile ../scoring.py\n",
     "from numpy import loadtxt\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "import pickle\n",
     "import json\n",
@@ -1204,12 +1222,15 @@
     "\n",
     "class ModelScorer(object):\n",
     "    def __init__(self, config=None):\n",
+    "        self.scaler = pickle.load(open(\"models/scaler.pkl\", 'rb'))\n",
     "        self.model = pickle.load(open(\"models/model.pkl\", 'rb'))\n",
     "\n",
     "    def predict(self, data):\n",
-    "        return self.model.predict([data])\n",
+    "        data = self.scaler.transform([data])\n",
+    "        return self.model.predict(data)\n",
     "\n",
     "    def evaluate(self, x, y):\n",
+    "        x = self.scaler.transform(x)\n",
     "        y_pred = self.model.predict(x)\n",
     "\n",
     "        predictions = [round(value) for value in y_pred]\n",
@@ -1220,17 +1241,11 @@
     "\n",
     "def evaluate(data_conf, model_conf, **kwargs):\n",
     "\n",
-    "    # load data\n",
     "    dataset = loadtxt(data_conf['data_path'], delimiter=\",\")\n",
     "\n",
     "    # split data into X and y\n",
-    "    X = dataset[:,0:8]\n",
-    "    Y = dataset[:,8]\n",
-    "\n",
-    "    # split data into train and test sets\n",
-    "    seed = 7\n",
-    "    test_size = 0.33\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "    X_test = dataset[:, 0:8]\n",
+    "    y_test = dataset[:, 8]\n",
     "\n",
     "    scorer = ModelScorer(model_conf)\n",
     "    scores = scorer.evaluate(X_test, y_test)\n",
@@ -1242,42 +1257,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "evaluate(data_conf, model_conf)"
+    "## Evaluate Model Scorer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 99.609375}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(data_conf, model_conf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a Single Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
-   "source": [
-    "# We create a new (fake) person having the three most correated values high\n",
-    "new_df = pd.DataFrame([6, 168, 72, 35, 0, 43.6, 0.627, 65])\n",
-    "# We scale those values like the others\n",
-    "new_df = scaler.transform(new_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "scorer = ModelScorer()\n",
-    "prediction = scorer.predict(new_df)"
+    "scorer.predict([6, 168, 72, 35, 0, 43.6, 0.627, 65])"
    ]
   },
   {
@@ -1286,15 +1334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writetofile"
+    "!git commit"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
