--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 115,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1322,7 +1322,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,15 +1334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master e8b9343] caixa demo\r\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\r\n"
+      "[master fcb4ca8] caixa demo\r\n",
+      " 1 file changed, 105 insertions(+), 49 deletions(-)\r\n"
      ]
     }
    ],
