--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER_GENERIC_RAW/model_modules/notebooks/Explore Diabetes Vantage.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import teradataml as tdml\n",
+    "import getpass\n",
     "\n",
+    "from teradataml.analytics import mle\n",
     "from teradataml import create_context, remove_context\n",
     "from teradataml.dataframe.dataframe import DataFrame\n",
     "from teradataml.dataframe.dataframe import in_schema\n",
@@ -23,36 +24,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "logging.basicConfig()\n",
-    "\n",
-    "# to see sql statements, change to logging.INFO\n",
-    "logging.getLogger('sqlalchemy.engine').setLevel(logging.WARNING)\n",
-    "\n",
     "from teradataml.options.display import display\n",
+    "\n",
     "display.print_sqlmr_query = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password:········\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x11a1f9be0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x11b5726d8>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_context(host = 'tddb-env-d-95.vantage.demo.intellicloud.teradata.com', \n",
-    "               username = os.environ[\"USERNAME\"], \n",
-    "               password=os.environ[\"PASSWORD\"])\n",
+    "host = 'tddb-env-d-95.vantage.demo.intellicloud.teradata.com'\n",
+    "password = getpass.getpass(\"Password:\")\n",
+    "create_context(host=host, username='AOA', password=password)\n",
     "\n",
     "#set schema\n",
     "get_connection().execute('database DEMO')"
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +192,7 @@
        "4   33            1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,31 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = DataFrame(\"PIMA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(768, 10)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
    ]
   },
   {
@@ -244,19 +227,39 @@
     {
      "data": {
       "text/plain": [
-       "      TwoHourSerIns      idx     BMI     Age  BloodP PlGlcConc HasDiabetes SkinThick DiPedFunc NumTimesPrg\n",
-       "func                                                                                                      \n",
-       "std         115.244  221.847   7.884   11.76  19.356    31.973        .477    15.952      .331        3.37\n",
-       "25%               0   191.75    27.3      24      62        99           0         0      .244           1\n",
-       "50%            30.5    383.5      32      29      72       117           0        23      .373           3\n",
-       "75%          127.25   575.25    36.6      41      80    140.25           1        32      .626           6\n",
-       "max             846      767    67.1      81     122       199           1        99      2.42          17\n",
-       "min               0        0       0      21       0         0           0         0      .078           0\n",
-       "mean         79.799    383.5  31.993  33.241  69.105   120.895        .349    20.536      .472       3.845\n",
-       "count           768      768     768     768     768       768         768       768       768         768"
+       "(768, 10)"
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      TwoHourSerIns     Age  BloodP PlGlcConc     BMI SkinThick      idx NumTimesPrg HasDiabetes DiPedFunc\n",
+       "func                                                                                                      \n",
+       "min               0      21       0         0       0         0        0           0           0      .078\n",
+       "std         115.244   11.76  19.356    31.973   7.884    15.952  221.847        3.37        .477      .331\n",
+       "25%               0      24      62        99    27.3         0   191.75           1           0      .244\n",
+       "50%            30.5      29      72       117      32        23    383.5           3           0      .373\n",
+       "75%          127.25      41      80    140.25    36.6        32   575.25           6           1      .626\n",
+       "max             846      81     122       199    67.1        99      767          17           1      2.42\n",
+       "mean         79.799  33.241  69.105   120.895  31.993    20.536    383.5       3.845        .349      .472\n",
+       "count           768     768     768       768     768       768      768         768         768       768"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
