--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1189,7 +1189,7 @@
     "import json\n",
     "\n",
     "model_conf = json.load(open(\"../../config.json\", \"r\"))\n",
-    "data_conf = json.load(open(\"/Users/wf250003/workspace/datasets/pima/data_train_config.json\", \"r\"))\n",
+    "data_conf = json.load(open(\"sample-data/data_train_config.json\", \"r\"))\n",
     "\n",
     "train(data_conf, model_conf)"
    ]
@@ -1340,13 +1340,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[vantage de8dd82] caixa demo\n",
+      "[vantage de8dd82]  demo\n",
       " 1 file changed, 34 insertions(+), 31 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -a -m \"caixa demo\""
+    "!git commit -a -m \"demo\""
    ]
   },
   {
@@ -1364,7 +1364,7 @@
       "Writing objects: 100% (8/8), 1.34 KiB | 1.34 MiB/s, done.\n",
       "Total 8 (delta 4), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
-      "To https://github.com/ThinkBigAnalytics/CaixaModels.git\n",
+      "To https://github.com/ThinkBigAnalytics/AoaModels.git\n",
       "   a674015..de8dd82  vantage -> vantage\n"
      ]
     }
