--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1101,7 +1101,7 @@
    "source": [
     "# %%writefile ../../config.json\n",
     "{\n",
-    "\t\"hyperparameters\": {\n",
+    "\t\"hyperParameters\": {\n",
     "\t\t\"eta\": 0.2,\n",
     "\t\t\"max_depth\": 6\n",
     "\t}\n",
@@ -1397,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
