--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1129,7 +1129,7 @@
     "\n",
     "\n",
     "def train(data_conf, model_conf, **kwargs):\n",
-    "    hyperparams = model_conf[\"hyperparameters\"]\n",
+    "    hyperparams = model_conf[\"hyperParameters\"]\n",
     "\n",
     "    dataset = loadtxt(data_conf['data_path'], delimiter=\",\")\n",
     "\n",
