Add pyspark support and demo model (#6)
* add pyspark demo and add support for pyspark models in general

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1101,16 +1101,9 @@
    "source": [
     "# %%writefile ../../config.json\n",
     "{\n",
-    "\t\"hyperparameters\": {\n",
+    "\t\"hyperParameters\": {\n",
     "\t\t\"eta\": 0.2,\n",
     "\t\t\"max_depth\": 6\n",
-    "\t},\n",
-    "\n",
-    "\t\"resources\": {\n",
-    "\t\t\"requests\": {\n",
-    "\t\t\t\"cpu\": \"200m\",\n",
-    "\t\t\t\"memory\": \"100Mi\"\n",
-    "\t\t}\n",
     "\t}\n",
     "}"
    ]
@@ -1136,7 +1129,7 @@
     "\n",
     "\n",
     "def train(data_conf, model_conf, **kwargs):\n",
-    "    hyperparams = model_conf[\"hyperparameters\"]\n",
+    "    hyperparams = model_conf[\"hyperParameters\"]\n",
     "\n",
     "    dataset = loadtxt(data_conf['data_path'], delimiter=\",\")\n",
     "\n",
@@ -1404,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
