--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules/notebooks/Explore Diabetes.ipynb
@@ -1196,9 +1196,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 312\r\n",
-      "-rw-r--r--  1 wf250003  365896978  154878 Mar 22 10:24 model.pkl\r\n",
-      "-rw-r--r--  1 wf250003  365896978     846 Mar 22 10:24 scaler.pkl\r\n"
+      "total 312\n",
+      "-rw-r--r--  1 wf250003  365896978  154878 Mar 22 10:24 model.pkl\n",
+      "-rw-r--r--  1 wf250003  365896978     846 Mar 22 10:24 scaler.pkl\n"
      ]
     }
    ],
@@ -1397,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
