--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/model_modules/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/model_modules/notebooks/Explore Diabetes Vantage.ipynb
@@ -31,13 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
+      "Username:  aoa_service_user\n",
       "Password: ········\n"
      ]
     },
@@ -52,17 +53,17 @@
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://wf250003:***@tddb-env-d-268.vantage.demo.intellicloud.teradata.com)"
+       "Engine(teradatasql://aoa_service_user:***@tddb-env-d-268.vantage.demo.intellicloud.teradata.com)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "host = 'tddb-env-d-268.vantage.demo.intellicloud.teradata.com'\n",
-    "username = 'wf250003'\n",
+    "username = input(\"Username: \")\n",
     "password = getpass.getpass(\"Password:\")\n",
     "create_context(host=host, username=username, password=password)"
    ]
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,9 +833,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../scoring.py\n"
+     ]
+    }
+   ],
    "source": [
     "# %%writefile ../scoring.py\n",
     "import os\n",
@@ -932,10 +941,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   ../../../../../README.md\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/__init__.py\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.py\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.py\u001b[m\n",
+      "\t\u001b[31mmodified:   Explore Diabetes Vantage.ipynb\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/notebooks/\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.sql\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.sql\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/util.py\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git commit -m \"my demo changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git push"
+   ]
   }
  ],
  "metadata": {
