update jobs to retrieve datasets online for simplicity

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
@@ -464,7 +464,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17981208>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1a97d2e8>"
       ]
      },
      "execution_count": 5,
@@ -899,7 +899,7 @@
      "output_type": "stream",
      "text": [
       "LR: 0.745875 (0.037335)\n",
-      "RFC: 0.763908 (0.046403)\n",
+      "RFC: 0.745875 (0.047710)\n",
       "XGB: 0.760471 (0.029182)\n"
      ]
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,15 +1134,15 @@
     "def train(data_conf, model_conf, **kwargs):\n",
     "    hyperparams = model_conf[\"hyperParameters\"]\n",
     "\n",
-    "    dataset = pd.read_csv(data_conf['url'], header=None).values\n",
+    "    dataset = pd.read_csv(data_conf['url'], header=None)\n",
     "\n",
     "    # split into test and train\n",
-    "    train, _ = train_test_split(dataset, test_size=data_conf[\"test_split\"])\n",
+    "    train, _ = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
     "\n",
     "    # split data into X and y\n",
+    "    train = train.values\n",
     "    X_train = train[:, 0:8]\n",
     "    y_train = train[:, 8]\n",
-    "    print(train.shape)\n",
     "    \n",
     "    scaler = Scaler()\n",
     "    scaler.fit(X_train)\n",
@@ -1172,14 +1172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7, 9)\n",
+      "(614, 9)\n",
       "Starting training...\n",
       "Finished training\n",
       "Saved trained model\n"
@@ -1200,17 +1200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 56\r\n",
-      "-rw-r--r--  1 wf250003  365896978     31 Aug 27 19:05 evaluation.json\r\n",
-      "-rw-r--r--  1 wf250003  365896978  20310 Aug 27 19:05 model.pkl\r\n",
-      "-rw-r--r--  1 wf250003  365896978    845 Aug 27 19:05 scaler.pkl\r\n"
+      "total 344\r\n",
+      "-rw-r--r--  1 wf250003  365896978      31 Aug 27 19:06 evaluation.json\r\n",
+      "-rw-r--r--  1 wf250003  365896978  165750 Aug 28 10:12 model.pkl\r\n",
+      "-rw-r--r--  1 wf250003  365896978     846 Aug 28 10:12 scaler.pkl\r\n"
      ]
     }
    ],
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,21 +1265,20 @@
     "\n",
     "def evaluate(data_conf, model_conf, **kwargs):\n",
     "\n",
-    "    dataset = pd.read_csv(data_conf['url'], header=None).values\n",
+    "    dataset = pd.read_csv(data_conf['url'], header=None)\n",
     "\n",
     "    # split into test and train\n",
-    "    _, test = train_test_split(dataset, test_size=data_conf[\"test_split\"])\n",
+    "    _, test = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
     "    \n",
     "    print(test.shape)\n",
     "\n",
     "    # split data into X and y\n",
+    "    test = test.values\n",
     "    X_test = test[:, 0:8]\n",
     "    y_test = test[:, 8]\n",
     "\n",
     "    scorer = ModelScorer(model_conf)\n",
     "    scores = scorer.evaluate(X_test, y_test)\n",
-    "\n",
-    "    print(scores)\n",
     "\n",
     "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
     "        json.dump(scores, f)\n"
@@ -1294,15 +1293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(761, 9)\n",
-      "{'accuracy': 64.91458607095927}\n"
+      "(154, 9)\n",
+      "{'accuracy': 73.37662337662337}\n"
      ]
     }
    ],
@@ -1319,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1332,7 +1331,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,15 +1343,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[vantage de8dd82]  demo\n",
-      " 1 file changed, 34 insertions(+), 31 deletions(-)\n"
+      "[issue-80 192f8ae] demo\r\n",
+      " 10 files changed, 79 insertions(+), 816 deletions(-)\r\n",
+      " rename model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/{model_modules => }/notebooks/Explore Diabetes.ipynb (92%)\r\n",
+      " rename model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/DOCKER/{model_modules => }/notebooks/Sample pyspark LR.ipynb (100%)\r\n",
+      " rename model_definitions/74eca506-e967-48f1-92ad-fb217b07e181/DOCKER/{model_modules => }/notebooks/notebook.ipynb (100%)\r\n",
+      " delete mode 100644 model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/model_modules/notebooks/sample-data/pima-indians-diabetes.csv\r\n",
+      " rename model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/{model_modules => }/notebooks/Explore Diabetes Vantage.ipynb (100%)\r\n",
+      " rename model_definitions/{03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules => 920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER}/notebooks/sample-data/pima-indians-diabetes.csv (100%)\r\n"
      ]
     }
    ],
