--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1063,44 +1063,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../requirements.txt\n"
+      "Overwriting ../model_modules/requirements.txt\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../requirements.txt\n",
-    "numpy\n",
-    "pandas\n",
-    "xgboost\n",
-    "sklearn"
+    "%%writefile ../model_modules/requirements.txt\n",
+    "numpy==1.16.1\n",
+    "pandas==0.24.2\n",
+    "xgboost==0.90\n",
+    "scikit-learn==0.21.3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'hyperparameters': {'eta': 0.2, 'max_depth': 6},\n",
-       " 'resources': {'requests': {'cpu': '200m', 'memory': '100Mi'}}}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../config.json\n"
+     ]
     }
    ],
    "source": [
-    "# %%writefile ../../config.json\n",
+    "%%writefile ../config.json\n",
     "{\n",
     "\t\"hyperParameters\": {\n",
     "\t\t\"eta\": 0.2,\n",
@@ -1118,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1139,7 @@
     "    train = train.values\n",
     "    X_train = train[:, 0:8]\n",
     "    y_train = train[:, 8]\n",
-    "    \n",
+    "\n",
     "    scaler = Scaler()\n",
     "    scaler.fit(X_train)\n",
     "    X_train = scaler.transform(X_train)\n",
@@ -1172,14 +1168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(614, 9)\n",
       "Starting training...\n",
       "Finished training\n",
       "Saved trained model\n"
@@ -1200,17 +1195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 344\r\n",
-      "-rw-r--r--  1 wf250003  365896978      31 Aug 27 19:06 evaluation.json\r\n",
-      "-rw-r--r--  1 wf250003  365896978  165750 Aug 28 10:12 model.pkl\r\n",
-      "-rw-r--r--  1 wf250003  365896978     846 Aug 28 10:12 scaler.pkl\r\n"
+      "total 336\r\n",
+      "-rw-r--r--  1 wf250003  365896978  165750 Aug 29 10:41 model.pkl\r\n",
+      "-rw-r--r--  1 wf250003  365896978     846 Aug 29 10:41 scaler.pkl\r\n"
      ]
     }
    ],
@@ -1231,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,8 +1263,6 @@
     "\n",
     "    # split into test and train\n",
     "    _, test = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
-    "    \n",
-    "    print(test.shape)\n",
     "\n",
     "    # split data into X and y\n",
     "    test = test.values\n",
@@ -1279,6 +1271,8 @@
     "\n",
     "    scorer = ModelScorer(model_conf)\n",
     "    scores = scorer.evaluate(X_test, y_test)\n",
+    "    \n",
+    "    print(scores)\n",
     "\n",
     "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
     "        json.dump(scores, f)\n"
@@ -1293,14 +1287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(154, 9)\n",
       "{'accuracy': 73.37662337662337}\n"
      ]
     }
@@ -1318,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1331,7 +1324,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,6 +1332,36 @@
    "source": [
     "scorer = ModelScorer()\n",
     "scorer.predict([6, 168, 72, 35, 0, 43.6, 0.627, 65])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch issue-80\n",
+      "Your branch is ahead of 'origin/issue-80' by 3 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   ../config.json\u001b[m\n",
+      "\t\u001b[31mmodified:   ../model_modules/requirements.txt\u001b[m\n",
+      "\t\u001b[31mmodified:   Explore Diabetes.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../model.json\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
    ]
   },
   {
