--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
@@ -1366,21 +1366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[issue-80 192f8ae] demo\r\n",
-      " 10 files changed, 79 insertions(+), 816 deletions(-)\r\n",
-      " rename model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/{model_modules => }/notebooks/Explore Diabetes.ipynb (92%)\r\n",
-      " rename model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/DOCKER/{model_modules => }/notebooks/Sample pyspark LR.ipynb (100%)\r\n",
-      " rename model_definitions/74eca506-e967-48f1-92ad-fb217b07e181/DOCKER/{model_modules => }/notebooks/notebook.ipynb (100%)\r\n",
-      " delete mode 100644 model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/model_modules/notebooks/sample-data/pima-indians-diabetes.csv\r\n",
-      " rename model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/{model_modules => }/notebooks/Explore Diabetes Vantage.ipynb (100%)\r\n",
-      " rename model_definitions/{03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/model_modules => 920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER}/notebooks/sample-data/pima-indians-diabetes.csv (100%)\r\n"
+      "[issue-80 dfc8286] demo\r\n",
+      " 3 files changed, 60 insertions(+), 38 deletions(-)\r\n"
      ]
     }
    ],
