add template readmes

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER/notebooks/Explore Diabetes.ipynb
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1344,17 +1344,15 @@
      "output_type": "stream",
      "text": [
       "On branch issue-80\n",
-      "Your branch is ahead of 'origin/issue-80' by 3 commits.\n",
+      "Your branch is ahead of 'origin/issue-80' by 4 commits.\n",
       "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mmodified:   ../config.json\u001b[m\n",
-      "\t\u001b[31mmodified:   ../model_modules/requirements.txt\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../README.md\u001b[m\n",
       "\t\u001b[31mmodified:   Explore Diabetes.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   ../../model.json\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -1366,15 +1364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[issue-80 dfc8286] demo\r\n",
-      " 3 files changed, 60 insertions(+), 38 deletions(-)\r\n"
+      "[issue-80 1ebf0ce] demo\r\n",
+      " 2 files changed, 4 insertions(+), 9 deletions(-)\r\n"
      ]
     }
    ],
