WIP - Issue 80 - Remove pyspark specialisation (#9)
* Remove pyspark specialisation and make demos use datasets from the internet instead of local

--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/notebooks/Explore Diabetes Vantage.ipynb
@@ -31,13 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
+      "Username:  aoa_service_user\n",
       "Password: ········\n"
      ]
     },
@@ -52,18 +53,19 @@
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://wf250003:***@tddb-env-d-268.vantage.demo.intellicloud.teradata.com)"
+       "Engine(teradatasql://aoa_service_user:***@tddb-env-d-268.vantage.demo.intellicloud.teradata.com)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "host = 'tddb-env-d-268.vantage.demo.intellicloud.teradata.com'\n",
+    "username = input(\"Username: \")\n",
     "password = getpass.getpass(\"Password:\")\n",
-    "create_context(host=host, username='wf250003', password=password)"
+    "create_context(host=host, username=username, password=password)"
    ]
   },
   {
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,11 +694,315 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now Lets Productionise This!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%writefile ../training.py\n",
+    "import os\n",
+    "\n",
+    "from teradataml import create_context\n",
+    "from teradataml.dataframe.dataframe import DataFrame\n",
+    "from teradataml.context.context import get_connection\n",
+    "from teradataml.analytics.mle import XGBoost\n",
+    "from teradataml.options.display import display\n",
+    "\n",
+    "display.print_sqlmr_query = True\n",
+    "\n",
+    "\n",
+    "def train(data_conf, model_conf, **kwargs):\n",
+    "    hyperparams = model_conf[\"hyperParameters\"]\n",
+    "\n",
+    "    create_context(host=data_conf[\"hostname\"],\n",
+    "                   username=os.environ[\"TD_USERNAME\"],\n",
+    "                   password=os.environ[\"TD_PASSWORD\"])\n",
+    "\n",
+    "    dataset = DataFrame(data_conf['data_table'])\n",
+    "\n",
+    "    print(\"Starting training...\")\n",
+    "\n",
+    "    # fit model to training data\n",
+    "    formula = \"HasDiabetes ~ NumTimesPrg + PlGlcConc + BloodP + SkinThick + TwoHourSerIns + BMI + DiPedFunc + Age\"\n",
+    "    xgb = XGBoost(formula=formula,\n",
+    "                  data=dataset,\n",
+    "                  id_column='idx',\n",
+    "                  reg_lambda=float(hyperparams[\"reg_lambda\"]),\n",
+    "                  shrinkage_factor=hyperparams[\"shrinkage_factor\"],\n",
+    "                  iter_num=10,\n",
+    "                  min_node_size=1,\n",
+    "                  max_depth=hyperparams[\"max_depth\"])\n",
+    "    \n",
+    "    print(xgb.model_table)\n",
+    "\n",
+    "    print(\"Finished training\")\n",
+    "\n",
+    "    # export model artefacts\n",
+    "    # xgb.model_table.to_sql(table_name=data_conf[\"model_table\"], if_exists=\"replace\")\n",
+    "    get_connection().execute(\"INSERT INTO {} SELECT {}, T.* FROM {} T\"\n",
+    "                             .format(data_conf[\"model_table\"], '1', xgb.model_table._table_name))\n",
+    "\n",
+    "    # model = xgb.model_table.to_pandas()\n",
+    "    # model.to_hdf(\"models/model.h5\", key=\"model\", mode=\"w\")\n",
+    "\n",
+    "    print(\"Saved trained model\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/teradataml/context/context.py:144: UserWarning: [Teradata][teradataml](TDML_2002) Overwriting an existing context associated with Teradata connection. Most of the operations on any teradataml DataFrames created before this will not work.\n",
+      "  warnings.warn(Messages.get_message(MessageCodes.OVERWRITE_CONTEXT))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting training...\n",
+      "SELECT * FROM XGBoost(\n",
+      "\tON \"PIMA_TRAIN\" AS InputTable\n",
+      "\tOUT TABLE OutputTable(WF250003.ml__td_xgboost0_156266375922633)\n",
+      "\tUSING\n",
+      "\tIdColumn('\"idx\"')\n",
+      "\tMaxDepth('10')\n",
+      "\tResponseColumn('\"HasDiabetes\"')\n",
+      "\tNumericInputs('\"NumTimesPrg\"','\"PlGlcConc\"','\"BloodP\"','\"SkinThick\"','\"TwoHourSerIns\"','\"BMI\"','\"DiPedFunc\"','\"Age\"')\n",
+      ") as sqlmr\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  tree_id iter class_num                                               tree                                  region_prediction\n",
+      "0       4    7         0  {\"sum_\":41.38352442999997,\"sumSq_\":45.18370143...  {\"512\":0.016039794,\"513\":0.01651994,\"514\":0.01...\n",
+      "1       5    7         0  {\"sum_\":17.88634803,\"sumSq_\":44.5412794364505,...  {\"1024\":0.046370678,\"1025\":0.025642,\"1026\":0.0...\n",
+      "2       4   10         1  {\"sum_\":-35.05197543000001,\"sumSq_\":37.2345983...  {\"264\":-0.013838396,\"270\":-0.0141689405,\"783\":...\n",
+      "3       5    5         1  {\"sum_\":-20.151826549999985,\"sumSq_\":50.987356...  {\"1024\":-0.056925498,\"1025\":-0.016782347,\"1026...\n",
+      "4       5    6         1  {\"sum_\":-19.12268176999999,\"sumSq_\":47.7220840...  {\"1024\":-0.041241422,\"1025\":-0.015747419,\"1026...\n",
+      "5       4    6         0  {\"sum_\":44.66858850000001,\"sumSq_\":48.21556063...  {\"1024\":0.015357548,\"513\":0.016336128,\"1025\":0...\n",
+      "6       4    9         0  {\"sum_\":36.59672999,\"sumSq_\":39.70123616742178...  {\"256\":0.015471154,\"257\":0.015925447,\"259\":0.0...\n",
+      "7       4    6         1  {\"sum_\":-44.66859068999998,\"sumSq_\":48.2155610...  {\"1024\":-0.016336128,\"1025\":-0.025880292,\"1026...\n",
+      "8       4    8         1  {\"sum_\":-38.51169591000001,\"sumSq_\":42.5556317...  {\"256\":-0.015751556,\"257\":-0.016218564,\"258\":-...\n",
+      "9       4    8         0  {\"sum_\":38.511696380000004,\"sumSq_\":42.5556308...  {\"256\":0.015751557,\"257\":0.016218564,\"258\":0.0...\n",
+      "Finished training\n",
+      "Saved trained model\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "model_conf = json.load(open(\"../../config.json\", \"r\"))\n",
+    "data_conf = {\n",
+    "        \"hostname\": \"tddb-env-d-268.vantage.demo.intellicloud.teradata.com\",\n",
+    "        \"data_table\": \"PIMA_TRAIN\",\n",
+    "        \"model_table\": \"aoa_models\"\n",
+    "    }\n",
+    "\n",
+    "os.environ[\"TD_USERNAME\"] = username\n",
+    "os.environ[\"TD_PASSWORD\"] = password\n",
+    "\n",
+    "train(data_conf, model_conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../scoring.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%writefile ../scoring.py\n",
+    "import os\n",
+    "import json\n",
+    "\n",
+    "from teradataml import create_context\n",
+    "from teradataml.dataframe.dataframe import DataFrame\n",
+    "from teradataml.analytics.mle import XGBoostPredict\n",
+    "from teradataml.options.display import display\n",
+    "\n",
+    "display.print_sqlmr_query = True\n",
+    "\n",
+    "\n",
+    "def evaluate(data_conf, model_conf, **kwargs):\n",
+    "    create_context(host=data_conf[\"hostname\"],\n",
+    "                   username=os.environ[\"TD_USERNAME\"],\n",
+    "                   password=os.environ[\"TD_PASSWORD\"])\n",
+    "\n",
+    "    # bug in python lib that doesn't allow creating large columns as CLOB etc. there must be way to specify schema..\n",
+    "    # model = pd.read_hdf('models/model.h5', 'model')\n",
+    "    # copy_to_sql(df=model, table_name=\"pima_model\", index=True, index_label=\"idx\", if_exists=\"replace\")\n",
+    "    model = DataFrame.from_query(\"SELECT tree_id, iter, class_num, tree, region_prediction \"\n",
+    "                                 \"FROM {} WHERE model_version = {}\".format(data_conf[\"model_table\"], '1'))\n",
+    "\n",
+    "    dataset = DataFrame(data_conf['data_table'])\n",
+    "\n",
+    "    print(\"Starting Evaluation...\")\n",
+    "\n",
+    "    predicted = XGBoostPredict(object=model,\n",
+    "                               newdata=dataset,\n",
+    "                               id_column='idx',\n",
+    "                               object_order_column=['tree_id', 'iter', 'class_num'],\n",
+    "                               terms=[\"HasDiabetes\"])\n",
+    "\n",
+    "    # lazy evaluation so trigger it. export evaluation results (temporary=True causes issue)\n",
+    "    predicted.result.to_sql(\"pima_predictions\", if_exists=\"replace\")\n",
+    "\n",
+    "    print(\"Finished Evaluation\")\n",
+    "\n",
+    "    summary = DataFrame.from_query(\n",
+    "        \"SELECT count(*) as match FROM pima_predictions WHERE HasDiabetes = CAST(prediction AS BIGINT)\")\n",
+    "    matches = summary.to_pandas()[\"match\"].values[0]\n",
+    "    accuracy = matches / dataset.shape[0]\n",
+    "    print(\"Accuracy: {}\".format(accuracy))\n",
+    "\n",
+    "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
+    "        json.dump({'accuracy': (accuracy * 100.0)}, f)\n",
+    "\n",
+    "    print(\"Saved evaluation results\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/teradataml/context/context.py:144: UserWarning: [Teradata][teradataml](TDML_2002) Overwriting an existing context associated with Teradata connection. Most of the operations on any teradataml DataFrames created before this will not work.\n",
+      "  warnings.warn(Messages.get_message(MessageCodes.OVERWRITE_CONTEXT))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Evaluation...\n",
+      "SELECT * FROM XGBoostPredict(\n",
+      "\tON \"PIMA_TEST\" AS \"input\"\n",
+      "\tPARTITION BY ANY\n",
+      "\tON \"WF250003\".\"ml__156264179632133\" AS ModelTable\n",
+      "\tDIMENSION\n",
+      "\tORDER BY \"tree_id\",\"iter\",\"class_num\"\n",
+      "\tUSING\n",
+      "\tIdColumn('\"idx\"')\n",
+      "\tAccumulate('\"HasDiabetes\"')\n",
+      ") as sqlmr\n",
+      "Finished Evaluation\n",
+      "Accuracy: 0.7321428571428571\n",
+      "Saved evaluation results\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_conf = {\n",
+    "        \"hostname\": \"tddb-env-d-268.vantage.demo.intellicloud.teradata.com\",\n",
+    "        \"data_table\": \"PIMA_TEST\",\n",
+    "        \"model_table\": \"aoa_models\"\n",
+    "    }\n",
+    "evaluate(data_conf, model_conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   ../../../../../README.md\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/__init__.py\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.py\u001b[m\n",
+      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.py\u001b[m\n",
+      "\t\u001b[31mmodified:   Explore Diabetes Vantage.ipynb\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/notebooks/\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.sql\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.sql\u001b[m\n",
+      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/util.py\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git commit -m \"my demo changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git push"
+   ]
   }
  ],
  "metadata": {
